[package]
name = "mindbase-adapter-roamresearch"
version = "0.1.0"
authors = ["Daniel Norman <daniel@danielnorman.net>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/mindbeam/mindbase-adapter-roamresearch"

[dependencies]

mindbase = { git = "https://github.com/mindbeam/mindbase.git" }
tempfile = "3.1.0"
chrono = { version = "0.4.10", features = ["serde"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
regex="1.3.6"
lazy_static="1.4.0"